# c2ats

./: .gitignore  .travis.yml  Makefile  README.md  c2ats.cabal  stack.yaml
app/: Main.hs
example/: Makefile  example.c
example/complex/: Makefile  example.c  example.h  main.dats
example/fileread/: Makefile  main.dats
example/globalvar/: example.c  example.h  main.dats
example/gtk3/: Makefile  main.dats
example/hello/: Makefile  main.dats
example/satstree/: Makefile  main.dats
example/satstree_gtk3/: Makefile
example/scandir/: Makefile  main.dats
example/structmember/: Makefile  example.c  example.h  main.dats
example/welltyped_fileread/: example_welltyped.sats  main.dats
example/welltyped_gtk3/: Makefile  example_welltyped.sats  main.dats
example/welltyped_hello/: Makefile  example_welltyped.sats  main.dats
example_notyet/satstree_gtk3/: main.dats
src/: Lib.hs
src/Language/: C2ATS.hs
src/Language/C2ATS/: FlatGlobalDecl.hs  HeaderTree.hs  Parser.hs  Pretty.hs  Process.hs
test/: Main.hs
