name:                c2ats
version:             0.1.0.1
synopsis:            An utility to generate ATS interface from C code
description:         Please see README.md
homepage:            https://github.com/metasepi/c2ats#readme
license:             GPL-3
license-file:        COPYING
author:              Kiwamu Okabe
maintainer:          kiwamu@debian.or.jp
copyright:           2016 Metasepi team
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.C2ATS
                     , Language.C2ATS.FlatGlobalDecl
                     , Language.C2ATS.Parser
                     , Language.C2ATS.Process
                     , Language.C2ATS.Pretty
                     , Language.C2ATS.HeaderTree
  build-depends:       base >= 4.6 && < 5
                     , language-c >= 0.5.0
                     , containers
                     , pretty >= 1.1.3.1
                     , bytestring
                     , filepath >= 1.4.0.0
                     , directory
                     , regex-posix
                     , process
  default-language:    Haskell2010

executable c2ats
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -fprof-auto "-with-rtsopts=-N -p -s -h -i0.1"
  build-depends:       base
                     , c2ats
  other-modules:       Paths_c2ats
  default-language:    Haskell2010

test-suite c2ats-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , HUnit
                     , test-framework
                     , test-framework-hunit
                     , test-framework-th
                     , c2ats
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/metasepi/c2ats
